[package]
name = "utu_api"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet-id = { git = "https://github.com/starknet-id/starknetid.rs", rev = "2b30c2453b96789a628c86d2edebb1023fa2e77d" }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "c974e5cb42e8d8344cee910b76005ec46b4dd3ed" }
utu_bridge_deposit_address = { path = "../utu_bridge_deposit_address" }
axum_auto_routes = { git = "https://github.com/Th0rgal/axum_auto_routes", rev = "ef190613942241f8f93a554cad7d64581a8a0916" }
axum = { version = "0.6.20", features = ["headers"] }
toml = "0.5.10"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.4", features = ["cors"] }
mongodb = "3.0.1"
reqwest = { version = "0.11.20", features = ["json"] }
async-trait = "0.1.68"
chrono = "0.4.38"
lazy_static = "1.4.0"
ctor = "0.1"
env_logger = "0.11.3"
log = "0.4.21"
serde_derive = "1.0.203"
anyhow = "1.0.86"
thiserror = "1.0.63"
zmq = "0.10.0"
hex = "0.4.3"
bitcoincore-rpc = "0.19.0"
bigdecimal = "0.4.6"
num-integer = "0.1.46"
bitcoin = "0.32.4"
paste = "1.0.15"
