[package]
name = "utu_auto_claim"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "093d5ecbbd0929720db38a1ca34d516ccb807398" }
starknet-core-derive = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "093d5ecbbd0929720db38a1ca34d516ccb807398", features = [
    "import_from_starknet",
] }
utu_bridge_deposit_address = { git = "https://github.com/lfglabs-dev/utu_bridge_deposit_address", rev = "be5e1e5bf9df0baf241da01b98a31d4416bd970e" }
axum_auto_routes = { git = "https://github.com/Th0rgal/axum_auto_routes", rev = "ef190613942241f8f93a554cad7d64581a8a0916" }
axum = { version = "0.6.20", features = ["headers"] }
toml = "0.5.10"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.4", features = ["cors"] }
mongodb = "3.0.1"
reqwest = { version = "0.11.20", features = ["json"] }
async-trait = "0.1.68"
chrono = "0.4.38"
lazy_static = "1.4.0"
ctor = "0.1"
env_logger = "0.11.3"
log = "0.4.21"
serde_derive = "1.0.203"
anyhow = "1.0.86"
thiserror = "1.0.63"
zmq = "0.10.0"
hex = "0.4.3"
bitcoincore-rpc = "0.19.0"
bigdecimal = "0.4.6"
num-integer = "0.1.46"
bitcoin = "0.32.4"
paste = "1.0.15"
