[package]
name = "deposit_request"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "171b0c65cac407ee33972e0ab2c3f8744c083753" }
starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "171b0c65cac407ee33972e0ab2c3f8744c083753" }
starknet-core-derive = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "171b0c65cac407ee33972e0ab2c3f8744c083753", features = [
    "import_from_starknet",
] }
axum_auto_routes = { git = "https://github.com/Th0rgal/axum_auto_routes", rev = "ef190613942241f8f93a554cad7d64581a8a0916" }
axum = { version = "0.6.20", features = ["headers"] }
toml = "0.5.10"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.4", features = ["cors"] }
mongodb = "3.0.1"
reqwest = { version = "0.11.20", features = ["json"] }
async-trait = "0.1.68"
chrono = "0.4.38"
lazy_static = "1.4.0"
ctor = "0.1"
env_logger = "0.11.3"
log = "0.4.21"
serde_derive = "1.0.203"
anyhow = "1.0.86"
thiserror = "1.0.63"
zmq = "0.10.0"
hex = "0.4.3"
bitcoincore-rpc = "0.19.0"
bigdecimal = "0.4.6"
num-integer = "0.1.46"
bitcoin = "0.32.4"
paste = "1.0.15"
p256 = { version = "0.12.0", features = ["pem"] }
base64 = "0.22.1"
indexmap = "2.7.0"
rust_decimal = "1.36.0"
base64ct = "1.6.0"
